# stopslop

./: .env.example  .gitignore  README.md  installer.sh  pyproject.toml
.github/workflows/: ci.yml
core/: __init__.py  cli.py  config.py  report.py  scoring.py  textmodel.py
core/extractors/: __init__.py  file_ingest.py  url_fetcher.py
core/layer1/: __init__.py  checks.py  fingerprint.py
core/layer2/: __init__.py  auditor.py  hygiene.py  rigor.py
core/layer3/: __init__.py  provenance.py
core/normalizers/: __init__.py  text_clean.py
core/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  openai_provider.py
core/render/: __init__.py  markdown.py
core/rules/: __init__.py  engine.py  loader.py  model.py
core/utils/: json_sanitize.py
prompts/: auditor_v2.txt
rules/: layer1_artifacts.json  layer1_formatting.json  layer1_negative.json  layer1_patterns.json  layer1_structure.json  layer1_vocab.json  layer2_hygiene.json
schemas/: report.v2.json  rule.schema.json
scripts/: ci_fixture_check.py
tests/: conftest.py  test_dogfood.py  test_integration_fixtures.py  test_loader.py  test_nonscoring.py  test_provenance.py  test_regressions.py  test_rigor.py  test_rules_examples.py  test_scoring_properties.py  test_url_fetcher.py
tests/fixtures/corpus/: fixture-annotations.md  fixture-clean.md  fixture-slop.md
tests/fixtures/mini-shai-hulud/: expected_gaps.json  expected_research.md  expected_review.md  source.md
tests/fixtures/well-sourced/: source.md
