[build-system]
requires = ["setuptools>=69,<81"]
build-backend = "setuptools.build_meta"

[project]
name = "stopslop"
version = "2.0.0"
description = "Analytic-rigor scorer for threat intelligence writing"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Cory Kennedy", email = "cory@darkcode.ai" }]
dependencies = [
    "requests>=2.32,<3",
    "beautifulsoup4>=4.12,<5",
    "trafilatura>=1.12,<3",
    "tldextract>=5.1,<6",
    "pydantic>=2.7,<3",
    "python-dotenv>=1.0,<2",
    "tenacity>=8.3,<10",
    "jsonschema>=4.21,<5",
    "pypdf>=4.2,<7",
    "python-docx>=1.1,<2",
    "filetype>=1.2,<2",
    "charset-normalizer>=3.3,<4",
]

[project.optional-dependencies]
llm = [
    "anthropic>=0.34,<1",
    "openai>=1.40,<3",
    "google-generativeai>=0.8,<0.9",
]
dev = [
    "pytest>=8.2,<9",
    "pytest-cov>=5,<8",
    "hypothesis>=6.100,<7",
    "ruff>=0.5,<1",
    "mypy>=1.10,<2",
    "types-requests>=2.32,<3",
    "types-jsonschema>=4.21,<5",
]

[project.scripts]
stopslop = "core.cli:main"

[tool.setuptools.packages.find]
include = ["core*"]

[tool.ruff]
target-version = "py311"
line-length = 120
include = ["core/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["SIM108", "SIM102"]

[tool.mypy]
strict = true
python_version = "3.11"
files = ["core"]

[[tool.mypy.overrides]]
module = [
    "trafilatura.*",
    "filetype.*",
    "docx.*",
    "google.*",
    "tldextract.*",
    "anthropic.*",
    "openai.*",
    "dotenv.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
